fixing alignment for featured teachers. Done statically for now, will need to refactor later

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,11 +28,10 @@ $grayMediumLight: #eaeaea;
 .teacher-item {
   float:left;
   font-size:0.8em;
-  padding: 8px;
+  padding: 20px;
 }
 #featured-teachers-list {
-  margin-left:auto;
-  margin-right:auto;
+  margin-left:15px;
 }
 
 /* universal */
